--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mock": "json-server -w -p 3333 ./mocks/database.json"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
