--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "mock": "json-server -w -p 3333 ./mocks/database.json"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "json-server": "^0.17.0",
     "nuka-carousel": "^5.0.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
